
0.5.3
=====

New Features:

  * Upgrade to Spring Framework 2.0.3.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).

0.5.2
=====

New Features:

  * Add the option to whitelist/blacklist allowed file upload types.
  * Upgrade to commons-io-1.3.1.jar.
  * Upgrade to commons-fileupload-1.2.jar.
  * When displaying a "topic does not exist" message, also include a link to
    create the topic.
  * Update look & feel - do not underline links, add fieldset tags.
  * Split the main admin page into Special:Admin and Special:Maintenance.
  * Hide the Special:Convert admin page.
  * Add an option to clear the cache from Special:Maintenance.
  * Added automatically generated JUnit tests from junitfactory.com.
  
Bugfixes:

  * Certain topic names could cause errors resulting in CPU usage of 100%.
  * Fix build error where build would fail if local files directory did not
    exist.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated German translations (axelclk).
  * Updated Hungarian translations (bdanee).
  * Added Japanese translations (nattolover).
  * Updated Polish translations (dlpa).

0.5.1
=====

New Features:

  * Initial spam filter support.
  * Upgrade to Spring 2.0.2.
  * Simplify the process for creating new Wiki "Special:" pages to hopefully
    make it easier for development of custom pages.
  * RSS updates (swift).
  
Bugfixes:

  * Fix infinite redirect problem when installing with BEA WebLogic.
  * Logo image not appearing on sub-pages (such as "Topic/Sub-Topic").
  * Fix problem with images not being properly resized.
  * Fix webAppRootKey error when multiple JAMWiki instances installed on the
    same server (swift).

Translation Updates:

  * Updated Chinese translations (ewen0930).
  * Updated Danish translations (g9adm).
  * Updated Chinese translations (hfl).

0.5.0
=====
